--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -49,7 +49,18 @@ jobs:
           cuda: '12.1.0'
           method: 'network'
           # https://docs.nvidia.com/cuda/cuda-installation-guide-microsoft-windows/
-          sub-packages: '["cublas_dev", "cudart", "curand_dev", "nvcc", "thrust", "visual_studio_integration"]'
+          sub-packages: '[
+            "cublas",
+            "cublas_dev",
+            "cudart",
+            "curand",
+            "curand_dev",
+            "nvcc",
+            "nvrtc",
+            "nvrtc_dev",
+            "thrust",
+            "visual_studio_integration"
+          ]'
       
       - name: List DLLs
         run: |
