--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -63,6 +63,13 @@ jobs:
           echo "CUDA_VERSION=aoeu" >> ~/cache-hash.env
           echo "CUDA_SUB_PACKAGES=ee11" >> ~/cache-hash.env
           echo "CUDA_PATH=fuubar" >> ~/cache-hash.env
+        
+      - name: test dummy cache read
+        run: |
+          echo $CUDA_VERSION
+          echo $CUDA_SUB_PACKAGES
+          echo $CUDA_PATH
+          echo "fugg"
 
       # - name: Cache CUDA Toolkit
       #   uses: actions/cache@v3
