--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -6,15 +6,17 @@ on:
   pull_request:
     branches:
       - release
-env:
-  CUDA_VERSION: "12.1.0"
-  CUDA_SUB_PACKAGES: '["cublas", "cublas_dev", "cudart", "curand", "curand_dev", "nvcc", "nvrtc", "nvrtc_dev", "thrust", "visual_studio_integration"]'
+
 jobs:
   build:
     runs-on: windows-2022
     defaults:
       run:
         shell: bash -el {0}
+    env:
+      CUDA_VERSION: "12.1.0"
+      CUDA_SUB_PACKAGES: '["cublas", "cublas_dev", "cudart", "curand", "curand_dev", "nvcc", "nvrtc", "nvrtc_dev", "thrust", "visual_studio_integration"]'
+      CUDA_PATH: "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v12.1"
     strategy:
       matrix:
         # https://en.wikipedia.org/wiki/CUDA#GPUs_supported
@@ -45,111 +47,62 @@ jobs:
       - name: Install CMake
         uses: lukka/get-cmake@v3.24.2
 
-      - name: Cache Env File
+      - name: Cache CUDA Toolkit
         uses: actions/cache@v3
-        id: cache-env-vars
+        id: cache-cuda-toolkit
         with:
-          path: ~/cache-hash.env
-          key: ${{ runner.os }}-env-vars-${{ hashFiles('~/cache-hash.env') }}
-      
-      - name: Restore Cached Env
-        if: steps.cache-env-vars.outputs.cache-hit == 'true'
-        run: |
-          cat ~/cache-hash.env >> $GITHUB_ENV
-      
-      - name: test dummy cache write
-        if: steps.cache-env-vars.outputs.cache-hit != 'true'
-        run: |
-          echo "CUDA_VERSION=aoeu" >> ~/cache-hash.env
-          echo "CUDA_SUB_PACKAGES=ee11" >> ~/cache-hash.env
-          echo "CUDA_PATH=fuubar" >> ~/cache-hash.env
+          path: ${{ env.CUDA_PATH }}
+          key: cuda-${{ runner.os }}-${{ env.CUDA_VERSION }}-${{ env.CUDA_SUB_PACKAGES }}
         
-      - name: test dummy cache read
+      - name: Install CUDA Toolkit
+        uses: JamesPerlman/get-cuda-toolkit@master
+        if: steps.cache-cuda-toolkit.outputs.cache-hit != 'true'
+        id: cuda-toolkit
+        with:
+          cuda: ${{ env.CUDA_VERSION }}
+          method: 'network'
+          # https://docs.nvidia.com/cuda/cuda-installation-guide-microsoft-windows/
+          sub-packages: ${{ env.CUDA_SUB_PACKAGES }}
+
+      - name: Setup Conda
+        uses: conda-incubator/setup-miniconda@v2.2.0
+        with:
+          activate-environment: py310
+          environment-file: etc/py310.yml
+          auto-activate-base: false
+
+      - name: CMake Configure
+        env:
+          CUDA_ARCH_LIST: ${{ matrix.artifact.arch }}
+          TCNN_CUDA_ARCHITECTURES: ${{ matrix.artifact.arch }}
         run: |
-          echo ${{ env.CUDA_VERSION }}
-          echo ${{ env.CUDA_SUB_PACKAGES }}
-          echo $CUDA_PATH
+          cmake . \
+            -B build \
+            -G "Visual Studio 17 2022" \
+            -A x64 \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DPYTHON_EXECUTABLE="${CONDA_PREFIX}\\python.exe" \
+            -DTN_BUILD_PYD=ON \
+            -DTN_BUILD_EXE=OFF
 
-      # - name: Cache CUDA Toolkit
-      #   uses: actions/cache@v3
-      #   id: cache-cuda-toolkit
-      #   path: 
-
-      # - name: Install CUDA Toolkit
-      #   uses: JamesPerlman/get-cuda-toolkit@master
-      #   if: steps.cache-cuda-toolkit.outputs.cache-hit != 'true'
-      #   id: cuda-toolkit
-      #   with:
-      #     cuda: 
-      #     method: 'network'
-      #     # https://docs.nvidia.com/cuda/cuda-installation-guide-microsoft-windows/
-      #     sub-packages: '[
-      #       "cublas",
-      #       "cublas_dev",
-      #       "cudart",
-      #       "curand",
-      #       "curand_dev",
-      #       "nvcc",
-      #       "nvrtc",
-      #       "nvrtc_dev",
-      #       "thrust",
-      #       "visual_studio_integration"
-      #     ]'
-      #     run: |
-      #       echo CUDA_VERSION=${{ steps.cuda-toolkit.outputs.cuda-version }} >> ~/cache-hash.env
-      #       echo CUDA_SUB_PACKAGES=${{ steps.cuda-toolkit.outputs.sub-packages }} >> ~/cache-hash.env
-      #       echo CUDA_PATH=${{ steps.cuda-toolkit.outputs.cuda-path }} >> ~/cache-hash.env
-            
-
-
-      # - name: List installed subpackages
-      #   run: |
-      #     echo ${{ steps.cuda-toolkit.outputs.sub-packages }}
-        
-      # - name: List DLLs
-      #   run: |
-      #     ls "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v12.1/bin"
-
-      # - name: Setup Conda
-      #   uses: conda-incubator/setup-miniconda@v2.2.0
-      #   with:
-      #     activate-environment: py310
-      #     environment-file: etc/py310.yml
-      #     auto-activate-base: false
+      - name: CMake Build
+        run: cmake --build build --config Release -j
       
-      # - name: CMake Configure
-      #   env:
-      #     CUDA_ARCH_LIST: ${{ matrix.artifact.arch }}
-      #     TCNN_CUDA_ARCHITECTURES: ${{ matrix.artifact.arch }}
-          
-      #   run: |
-      #     cmake . \
-      #       -B build \
-      #       -G "Visual Studio 17 2022" \
-      #       -A x64 \
-      #       -DCMAKE_BUILD_TYPE=Release \
-      #       -DPYTHON_EXECUTABLE="${CONDA_PREFIX}\\python.exe" \
-      #       -DTN_BUILD_PYD=ON \
-      #       -DTN_BUILD_EXE=OFF
+      - name: Archive Build Result
+        uses: thedoctor0/zip-release@0.7.1
+        with:
+          type: 'zip'
+          path: build/Release/
+          filename: 'TurboNeRF-${{ matrix.artifact.name }}.zip'
 
-      # - name: CMake Build
-      #   run: cmake --build build --config Release -j
-      
-      # - name: Archive Build Result
-      #   uses: thedoctor0/zip-release@0.7.1
-      #   with:
-      #     type: 'zip'
-      #     path: build/Release/
-      #     filename: 'TurboNeRF-${{ matrix.artifact.name }}.zip'
-
-      # - name: Upload Binaries
-      #   uses: ncipollo/release-action@v1
-      #   with:
-      #     allowUpdates: true
-      #     body: 'Binary for NVIDIA ${{ matrix.artifact.name }} GPUs: ${{ matrix.artifact.gpus }}'
-      #     bodyFile: 'TurboNeRF-${{ matrix.artifact.name }}.zip'
-      #     commit: ${{ github.sha }}
-      #     makeLatest: true
-      #     name: 'TurboNeRF Pre-Release (${{ matrix.artifact.name }})'
-      #     prerelease: true
-      #     token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload Binaries
+        uses: ncipollo/release-action@v1
+        with:
+          allowUpdates: true
+          body: 'Binary for NVIDIA ${{ matrix.artifact.name }} GPUs: ${{ matrix.artifact.gpus }}'
+          bodyFile: 'TurboNeRF-${{ matrix.artifact.name }}.zip'
+          commit: ${{ github.sha }}
+          makeLatest: true
+          name: 'TurboNeRF Pre-Release (${{ matrix.artifact.name }})'
+          prerelease: true
+          token: ${{ secrets.GITHUB_TOKEN }}
