use prerelease tag

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -109,4 +109,5 @@ jobs:
           makeLatest: true
           name: 'TurboNeRF Pre-Release (${{ matrix.artifact.name }})'
           prerelease: true
+          tag: 'pre-release'
           token: ${{ secrets.GITHUB_TOKEN }}
