only on workflow dispatch

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,11 +1,12 @@
 name: build release
 on:
-  push:
-    branches:
-      - release
-  pull_request:
-    branches:
-      - release
+  # push:
+  #   branches:
+  #     - release
+  # pull_request:
+  #   branches:
+  #     - release
+  workflow_dispatch:
 
 jobs:
   build:
