--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -48,16 +48,16 @@ jobs:
       - name: Install CMake
         uses: lukka/get-cmake@v3.24.2
 
-      - name: Set CUDA Cache Key
-        run: echo "INSTALL_CUDA_TOOLKIT_CACHE_KEY=cache-key" >> $GITHUB_ENV
-#          echo "INSTALL_CUDA_TOOLKIT_CACHE_KEY=cuda-cuda-${{ runner.os }}-${CUDA_VERSION}-$(echo $CUDA_SUB_PACKAGES | tr -d '[:space:]\[\]\",')" >> $GITHUB_ENV
+#       - name: Set CUDA Cache Key
+#         run: echo "INSTALL_CUDA_TOOLKIT_CACHE_KEY=cache-key" >> $GITHUB_ENV
+# #          echo "INSTALL_CUDA_TOOLKIT_CACHE_KEY=cuda-cuda-${{ runner.os }}-${CUDA_VERSION}-$(echo $CUDA_SUB_PACKAGES | tr -d '[:space:]\[\]\",')" >> $GITHUB_ENV
 
       - name: Cache CUDA Toolkit
         uses: actions/cache@v3
         id: cache-cuda-toolkit
         with:
           path: ${{ env.CUDA_PATH }}
-          key: ${{ env.INSTALL_CUDA_TOOLKIT_CACHE_KEY }}
+          key: abc
         
       - name: Install CUDA Toolkit
         uses: JamesPerlman/get-cuda-toolkit@master
