rename NeRFRenderCore -> TurboNeRF

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,12 @@
                 }
             ],
             "console": "integratedTerminal"
+        },
+        {
+            "name": "(msvc) Attach",
+            "type": "cppvsdbg",
+            "request": "attach",
+            "processId": "${command:pickProcess}",
         }
     ]
 }
