--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -112,3 +112,15 @@ jobs:
           replacesArtifacts: true
           tag: 'pre-release'
           token: ${{ secrets.GITHUB_TOKEN }}
+  sync:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Trigger TurboNeRF-Blender Release
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.SYNC_PAT}}
+          repository: 'TurboNeRF/TurboNeRF-Blender'
+          event-type: 'release'
+          client-payload: '{"tag": "pre-release"}'
+
