--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -114,7 +114,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
   trigger-blender-addon-release:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-python-library-binaries
     steps:
       - name: Trigger TurboNeRF-Blender Release
         uses: peter-evans/repository-dispatch@v2
