--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -48,7 +48,7 @@ jobs:
         uses: lukka/get-cmake@v3.24.2
         
       - name: Install CUDA Toolkit
-        uses: Jimver/get-cuda-toolkit@v0.2.9
+        uses: Jimver/cuda-toolkit@v0.2.9
         id: cuda-toolkit
         with:
           cuda: "12.1.0"
