test discord notifier

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -15,6 +15,16 @@ on:
 
 
 jobs:
+  test:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Discord Notify
+        uses: Ilshidur/action-discord@0.3.2
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        with:
+          args: 'DO NOT BE ALARMED.  THIS IS SIMPLY A TEST.  ${{ inputs.tag }}'
+    
   build-pylib-binaries:
     runs-on: windows-2022
     defaults:
