--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -9,16 +9,6 @@ on:
 
 
 jobs:
-  notify-discord:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Dispatch Release Notification
-        uses: Ilshidur/action-discord@0.3.2
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        with:
-          args: "*THIS IS JUST A TEST* New release available! [${{ inputs.tag }}](https://rick.roll)"
-  
   build-pylib-binaries:
     runs-on: windows-2022
     defaults:
@@ -125,6 +115,17 @@ jobs:
     
     outputs:
       release_url: ${{ steps.make-release.outputs.html_url }}
+
+  notify-discord:
+    runs-on: ubuntu-20.04
+    needs: build-pylib-binaries
+    steps:
+      - name: Dispatch Release Notification
+        uses: Ilshidur/action-discord@0.3.2
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        with:
+          args: "New release available! [PyTurboNeRF ${{ inputs.tag }}](${{ needs.build-pylib-binaries.outputs.release_url }})"
 
   trigger-blender-addon-release:
     runs-on: ubuntu-20.04
