--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -22,6 +22,11 @@ jobs:
         # https://en.wikipedia.org/wiki/CUDA#GPUs_supported
         artifact: [
           {
+            arch: "61",
+            name: "Pascal",
+            gpus: "GTX 1050 - 1080 & Ti, Quadro P400 - P6000"
+          },
+          {
             arch: "75",
             name: "Turing",
             gpus: "RTX 2060 - 2080 & Ti, Quadro RTX 4000 - 8000"
