--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿# CMakeList.txt : Top-level CMake project file, do global configuration
+# CMakeList.txt : Top-level CMake project file, do global configuration
 # and include sub-projects here.
 #
 cmake_minimum_required (VERSION 3.24)
@@ -143,6 +143,7 @@ set(HEADERS
 	src/workspaces/network-workspace.cuh
 	src/workspaces/occupancy-grid-workspace.cuh
 	src/workspaces/rendering-workspace.cuh
+	src/workspaces/scene-workspace.cuh
 	src/workspaces/training-workspace.cuh
 	src/workspaces/workspace.cuh
 
