BFR (Big Fuckin' Refactor) - Multi-NeRF capability - rendering is much slower, need to address this. - potentially enables multiple NeRFs to be rendered in the same scene - python lib segfaults after exiting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -157,6 +157,7 @@
         "version": "cpp",
         "glad.h": "c",
         "coroutine": "cpp",
-        "resumable": "cpp"
+        "resumable": "cpp",
+        "codecvt": "cpp"
     }
 }
