--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# CMakeList.txt : Top-level CMake project file, do global configuration
+﻿# CMakeList.txt : Top-level CMake project file, do global configuration
 # and include sub-projects here.
 #
 cmake_minimum_required (VERSION 3.24)
@@ -164,6 +164,7 @@ set(SOURCES
 
 	# models
 	src/models/dataset.cu
+	src/models/nerf.cu
 	src/models/training-image.cu
 
 	# rendering
