WIP: fx & raymarcher refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,10 @@ set(HEADERS
     src/core/renderer.cuh
     src/core/trainer.cuh
 
+    # effects
+    src/effects/spatial-effect.cuh
+    src/effects/spatial/repeater.cuh
+
     # math
     src/math/device-math.cuh
     src/math/hexagon-grid.cuh
