--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,6 +164,7 @@ set(HEADERS
     src/utils/occupancy-grid-kernels.cuh
     src/utils/parallel-utils.cuh
     src/utils/queues.h
+    src/utils/raymarching-utils.cuh
     src/utils/render-flags.cuh
     src/utils/rendering-kernels.cuh
     src/utils/stream-compaction.cuh
